Rework AI training and game loop, bump to 3.0.0